--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test:env": "NEXT_PUBLIC_ENABLE_TEST_DASHBOARD=true PORT=4000 next dev",
+    "test:env": "cross-env NEXT_PUBLIC_ENABLE_TEST_DASHBOARD=true PORT=4000 next dev",
     "test:unit": "jest",
     "test:integration": "jest --config jest.integration.config.js",
     "test:e2e": "cypress run",
@@ -17,6 +17,7 @@
     "@anthropic-ai/sdk": "latest",
     "@headlessui/react": "^2.2.1",
     "@supabase/supabase-js": "latest",
+    "cross-env": "^7.0.3",
     "next": "latest",
     "openai": "latest",
     "react": "latest",
